<resources>
    <string name="app_name">ListNotes</string>
    <string name="add_new_item">Add New Item</string>
    <string name="label_add_new_item">Add New Item</string>
    <string name="label_item_title">Title</string>
    <string name="label_item_content">Content</string>
    <string name="btn_label_save">Save</string>
    <string name="label_item_detail">Detail</string>
    <string name="label_item_time_stamp">Item Created On</string>
</resources>
