<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/label_add_new_item"
        android:textSize="@dimen/sp_25" />

    <Button
        android:layout_alignParentEnd="true"
        android:text="@string/btn_label_save"
        android:id="@+id/save_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/save_content"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/label_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/label_item_title"
                android:textSize="@dimen/sp_20" />

            <EditText
                android:id="@+id/value_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_item_title"
                android:layout_marginTop="@dimen/dp_5"
                android:maxLength="100"
                android:textSize="@dimen/sp_20" />


            <TextView
                android:id="@+id/label_item_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/value_item_title"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/label_item_content"
                android:textSize="@dimen/sp_20" />

            <EditText
                android:id="@+id/value_item_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_item_content"
                android:layout_marginTop="@dimen/dp_5"
                android:textSize="@dimen/sp_20" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>


